# ncc-3d

./: .gitignore  .gitmodules
plotting/: Cargo.toml
plotting/src/: main.rs
prototype_finite_diff/: Cargo.toml  run_numerical_tests.sh
prototype_finite_diff/src/: main.rs  old.rs
prototype_v0/: Cargo.toml
prototype_v0/src/: laplacian.rs  main.rs  mesh.rs
prototype_v1/: Cargo.toml  get_lapl.py  get_robust_lapl.py  make_positions.py  parse_h_results.py  res.txt  res2.txt  res3.txt  run_h_tests.sh  test.txt  with_reactions.txt
prototype_v1/results/: with_gradient_initial.txt
prototype_v1/results/with_initial_concentrations/: with_spike_inital.txt
prototype_v1/results/with_stim/: gradient_res.txt  spike_res.txt
prototype_v1/scripts/: choose_h.py  make_gif.sh  make_hexagonal_rectangle.py  make_icosahedron.py  make_line.py  make_pos.py  make_pos_old.py  make_rectangle.py  make_rectangle_off.py  make_rhombus.py  make_sphere.py
prototype_v1/src/: chemistry.rs  cotangent_laplacian.rs  laplacian.rs  main.rs  plotting.rs  stim.rs  storage.rs
