[package]
name = "prototype_v1"
version = "0.1.0"
authors = ["Lily Lin <rctcwyvrn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tri-mesh = "0.5.0"
eyre = "0.6.5"
plotters = "0.3.0"

[profile.release]
debug = true
